--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ button {
 
 }
 
-#sign-top, #sign-bottom {
+#sign-top, #shop-bottom {
   background: #3882F6;
   border: 1px solid #3882F6;
   font-size: 13px;
@@ -79,7 +79,7 @@ button {
   justify-content: center;
 }
 
-#sign-top:hover, #sign-bottom:hover {
+#sign-top:hover, #shop-bottom:hover {
   background-color: #F9FAF8;
   color: #3882F6;
 }
@@ -112,6 +112,7 @@ section information
 .container-info {
   min-width: 600px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -123,7 +124,23 @@ section information
   color: #1F2937;
 }
 
-.img-section-info {
+.img1 {
+  order: 2;
+}
+
+.img2 {
+  order:1;
+}
+
+.img3 {
+  order:3;
+}
+
+.img4 {
+  order:4;
+}
+
+.img-info {
   width: 250px;
   height: 250px;
   border: 5px solid #1F2937;
@@ -175,7 +192,7 @@ h1, p {
   margin: 10px;
 }
 
-#sign-bottom {
+#shop-bottom {
   margin-left: 20px;
   border: 1px solid #F9FAF8;
 }
