--- a/style.css
+++ b/style.css
@@ -113,8 +113,7 @@ section information
   min-width: 600px;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 50px;
 }
