--- a/style.css
+++ b/style.css
@@ -114,10 +114,10 @@ section information
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 50px;
 }
 
 .info {
+  margin: 5px 25px;
   font-size: 16px;
   color: #1F2937;
 }
