--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Verdana, sans-serif;
   margin: 0px;
-  min-width: 600px;
+  min-width: 400px;
   display: flex;
   flex-direction: column;
 }
@@ -37,7 +37,7 @@ li a {
   text-decoration: none;
   font-size: 18px;
   color: #F9FAF8;
-  margin-left: 30px;
+  padding: 0px 15px;
 }
 
 .div-header {
@@ -48,8 +48,12 @@ li a {
 }
 
 .header-text {
-  width: 600px;
   padding-bottom: 15px;
+}
+
+.header-text, #spider-web-img {
+  min-width: 400px;
+  max-width: 600px;
 }
 
 .header-text h1 {
@@ -87,8 +91,7 @@ button {
 }
 
 #spider-web-img {
-  width: 600px;
-  height: 375px;
+  max-height: 375px;
   border-radius: 10px;
 }
 
@@ -96,6 +99,7 @@ button {
 section information
 ----------------*/
 .section-info {
+  min-width: 400px;
   background-color: #F9FAF8;
   text-align: center;
   padding-bottom: 30px;
@@ -110,7 +114,7 @@ section information
 }
 
 .container-info {
-  min-width: 600px;
+  min-width: 400px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -147,6 +151,7 @@ section information
 
 /* Section 2 quote */
 .section-quote {
+  min-width: 400px;
   background-color: #E5E7EB;
   padding-bottom: 30px;
   display: flex;
