--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ figcaption {
 }
 
 .div-sign {
-  max-width: 600px;
+  max-width: 50%;
   background: #3882F6;
   margin: 60px 0px;
   padding: 5px 20px;
