--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ section information
   min-width: 400px;
   display: flex;
   justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
 }
 
@@ -181,9 +182,8 @@ figcaption {
 }
 
 .div-sign {
-  max-width: 50%;
   background: #3882F6;
-  margin: 60px 0px;
+  margin: 60px 30px;
   padding: 5px 20px;
   border-radius: 10px;
   display: flex;
