--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@ body {
 header {
   background-color: #1F2937;
   padding-bottom: 30px;
-  display: flex;
+  display: block;
   flex-direction: column;
-  /* header-nav & section */
 }
 
 .header-nav {
-  margin-bottom: : 60px;
+  margin-bottom: 40px;
   padding: 0px 15px;
   display: flex;
   justify-content: space-between;
@@ -30,7 +29,6 @@ header {
   padding: 0;
   display: flex;
   white-space: nowrap;
-  /* text nowrap */
 }
 
 li a {
@@ -43,8 +41,8 @@ li a {
 .div-header {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  /* wrap text and image to do a column */
 }
 
 .header-text {
@@ -52,7 +50,6 @@ li a {
 }
 
 .header-text, #spider-web-img {
-  min-width: 400px;
   max-width: 600px;
 }
 
@@ -68,7 +65,7 @@ li a {
 }
 
 button {
-  width: 100px;
+  min-width: 100px;
   height: 30px;
   padding: 8px 16px;
   border-radius: 8px;
@@ -100,11 +97,10 @@ section information
 ----------------*/
 .section-info {
   background-color: #F9FAF8;
-  text-align: center;
   padding: 15px 0px 30px 0px;
-  display: flex;
+  text-align: center;
+  display: block;
   flex-direction: column;
-  align-items: center;
 }
 
 #title-info {
@@ -125,7 +121,7 @@ section information
   font-size: 16px;
   color: #1F2937;
 }
-
+/*
 .img1 {
   order: 2;
 }
@@ -141,7 +137,7 @@ section information
 .img4 {
   order: 4;
 }
-
+*/
 .img-info {
   width: 250px;
   height: 250px;
